--- a/components/Detail/Creatie/Feedback/feedback.module.css
+++ b/components/Detail/Creatie/Feedback/feedback.module.css
@@ -55,10 +55,14 @@
   margin-bottom: 2rem;
 }
 
+.feedback_info {
+  margin: 1rem 0;
+}
+
 .feedback_date {
   composes: smallText from "../../../../css/typo.module.css";
   text-align: center;
-  margin-top: 0.5rem;
+  margin: 0.2rem 0;
 }
 
 .feedback_type {
@@ -89,16 +93,16 @@
 @media screen and (max-width: 850px) {
   .feedback {
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     justify-content: flex-end;
     position: relative;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
-    height: 28rem;
+    height: 25rem;
   }
 
   .feedback:nth-child(even) {
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-end;
   }
 
@@ -107,13 +111,23 @@
     list-style-type: none;
     display: flex;
     flex-direction: column-reverse;
-    position: relative;
+    position: absolute;
     bottom: 0;
     align-self: flex-end;
   }
 
   .feedback:nth-child(even) .feedback_content {
     align-self: flex-start;
+    flex-direction: column-reverse;
+  }
+
+  .feedback_icon {
+    margin: auto 1rem;
+  }
+
+  .feedback_info {
+    margin: 0;
+    margin-bottom: 1rem;
   }
 
   .feedback_card {
@@ -123,6 +137,60 @@
     background-color: beigeColor;
     width: 40vw;
     height: 25vh;
-    margin: 1.5rem;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .feedback {
+    flex-direction: row;
+    position: relative;
+    align-items: flex-start;
+    width: 100%;
+    height: auto;
+    margin: 5rem 0;
+    padding: 0;
+    justify-content: flex-start;
+  }
+
+  .feedback:nth-child(even) {
+    flex-direction: row;
+    justify-content: flex-start;
+  }
+
+  .feedback_content {
+    flex-direction: column-reverse;
+    position: relative;
+    bottom: unset;
+    align-self: flex-start;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin: 0;
+    margin-left: 2rem;
+  }
+
+  .feedback_date,
+  .feedback_type {
+    text-align: left;
+  }
+
+  .feedback:nth-child(even) .feedback_content {
+    align-self: flex-start;
+    flex-direction: column-reverse;
+  }
+
+  .feedback_icon {
+    margin: auto 0;
+    position: relative;
+    align-self: unset;
+    top: unset;
+    left: unset;
+  }
+
+  .feedback_card {
+    padding: 2rem;
+    width: 100%;
+    height: 25vh;
+    margin: 0;
   }
 }
