--- a/components/Detail/Header/header.module.css
+++ b/components/Detail/Header/header.module.css
@@ -124,8 +124,9 @@
 
   .tagline_image {
     position: absolute;
-    bottom: 0;
-    left: 0;
+    top: -2rem;
+    left: -2rem;
+    z-index: -1;
   }
 
   .extra_image {
