--- a/components/Create/Step3/step3.module.css
+++ b/components/Create/Step3/step3.module.css
@@ -7,6 +7,10 @@
   composes: view from '../../../css/layout.module.css';
 }
 
+.error {
+  color: redColor;
+}
+
 .part_header {
   margin-bottom: 5rem;
 }
@@ -173,7 +177,6 @@
   display: flex;
 }
 
-
 /* Toggles */
 
 .button_toggles {
@@ -192,12 +195,12 @@
 }
 
 .button_toggles:first-of-type {
-  margin-right: -.2rem;
+  margin-right: -0.2rem;
 }
 
 .true_false {
   border: 0.2rem solid blueColor;
-  padding: 0.6rem .8rem;
+  padding: 0.6rem 0.8rem;
   display: inline-block;
   cursor: pointer;
 }
@@ -314,7 +317,7 @@
 }
 
 .need_image {
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 .empty {
@@ -469,7 +472,6 @@
   }
 }
 
-
 @media screen and (max-width: 750px) {
   .checkbox_image {
     padding: 1.2rem 1.6rem;
@@ -481,7 +483,6 @@
 }
 
 @media screen and (max-width: 550px) {
-
   .checkboxes {
     justify-content: center;
   }
@@ -490,14 +491,13 @@
     margin: 0 3rem;
   }
 
-  .checkbox_container:first-of-type,.checkbox_container:nth-of-type(4){
+  .checkbox_container:first-of-type,
+  .checkbox_container:nth-of-type(4) {
     margin-left: 0;
   }
-
 }
 
 @media screen and (max-width: 450px) {
-
   .checkboxes {
     justify-content: center;
   }
@@ -506,10 +506,8 @@
     margin: 0 2rem;
   }
 
-  .checkbox_container:first-of-type,.checkbox_container:nth-of-type(4){
+  .checkbox_container:first-of-type,
+  .checkbox_container:nth-of-type(4) {
     margin-left: 0;
   }
-
 }
-
-
