--- a/components/Profile/Notifications/notifications.module.css
+++ b/components/Profile/Notifications/notifications.module.css
@@ -6,8 +6,12 @@
   z-index: 2;
 }
 
+.error {
+  color: redColor;
+}
+
 .button {
-  composes: smallCaps from "../../../css/typo.module.css";
+  composes: smallCaps from '../../../css/typo.module.css';
   border: 0.2rem solid blueColor;
   padding: 0.8rem 1rem;
   position: relative;
@@ -18,7 +22,7 @@
 }
 
 .button:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -53,7 +57,7 @@
 }
 
 .label {
-  composes: smallCaps from "../../../css/typo.module.css";
+  composes: smallCaps from '../../../css/typo.module.css';
   margin-bottom: 1rem;
 }
 
@@ -63,7 +67,7 @@
   border-top: none;
   border-right: none;
   border-left: none;
-  composes: empty from "../../../css/typo.module.css";
+  composes: empty from '../../../css/typo.module.css';
   padding: 0.2rem 0.5rem;
 }
 
