--- a/components/Detail/Needs/needs.module.css
+++ b/components/Detail/Needs/needs.module.css
@@ -8,17 +8,21 @@
   justify-content: space-between;
 }
 
+.error {
+  color: redColor;
+}
+
 .needs_title {
-  composes: mediumTitle from "../../../css/typo.module.css";
+  composes: mediumTitle from '../../../css/typo.module.css';
   margin-bottom: 3rem;
 }
 
 .needs_provided {
-  composes: smallCaps from "../../../css/typo.module.css";
+  composes: smallCaps from '../../../css/typo.module.css';
 }
 
 .needs_provided__light {
-  composes: smallCapsLight from "../../../css/typo.module.css";
+  composes: smallCapsLight from '../../../css/typo.module.css';
   padding-right: 0.5rem;
 }
 
@@ -71,7 +75,7 @@
 }
 
 .need_item__text {
-  composes: smallCaps from "../../../css/typo.module.css";
+  composes: smallCaps from '../../../css/typo.module.css';
   margin-bottom: 1rem;
   font-size: 1.2rem;
 }
@@ -93,7 +97,7 @@
 }
 
 .needs_item__image:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -115,11 +119,11 @@
 }
 
 .button {
-  composes: smallButton from "../../../css/buttons.module.css";
+  composes: smallButton from '../../../css/buttons.module.css';
 }
 
 .circle_button {
-  composes: smallCircleButton from "../../../css/buttons.module.css";
+  composes: smallCircleButton from '../../../css/buttons.module.css';
   transition: none;
 }
 
@@ -132,7 +136,7 @@
 }
 
 .button_image {
-  composes: smallButtonImage from "../../../css/buttons.module.css";
+  composes: smallButtonImage from '../../../css/buttons.module.css';
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -154,7 +158,7 @@
   height: 100%;
   background-color: transparent;
   border: none;
-  composes: empty from "../../../css/typo.module.css";
+  composes: empty from '../../../css/typo.module.css';
 }
 
 .motivation {
@@ -167,7 +171,7 @@
 }
 
 .motivation:after {
-  content: "";
+  content: '';
   position: absolute;
   display: block;
   background: inherit;
@@ -194,11 +198,11 @@
 }
 
 .motivation_button {
-  composes: button from "../../../css/buttons.module.css";
+  composes: button from '../../../css/buttons.module.css';
 }
 
 .motivation_circle__button {
-  composes: circleButton from "../../../css/buttons.module.css";
+  composes: circleButton from '../../../css/buttons.module.css';
   transition: none;
 }
 
@@ -207,7 +211,7 @@
 }
 
 .motivation_button__image {
-  composes: buttonImage from "../../../css/buttons.module.css";
+  composes: buttonImage from '../../../css/buttons.module.css';
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -222,7 +226,7 @@
 }
 
 .button_arrow {
-  composes: buttonBack from "../../../css/buttons.module.css";
+  composes: buttonBack from '../../../css/buttons.module.css';
   cursor: pointer;
 }
 
@@ -231,7 +235,7 @@
 }
 
 .back_text {
-  composes: bold from "../../../css/typo.module.css";
+  composes: bold from '../../../css/typo.module.css';
 }
 
 @media screen and (max-width: 850px) {
